# DeepMatrixanim

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-19-first-manim-demo.md  2026-05-19-vector-space-demos.md  2026-05-20-iris-mlp-before-after.md
docs/superpowers/specs/: 2026-05-19-vector-space-demos-design.md  2026-05-20-iris-mlp-before-after-design.md
scenes/: iris_mlp_training_demo.py  linear_layer_space_demo.py  mlp_forward_demo.py  relu_space_folding_demo.py  representation_space_demo.py
src/deepmatrixanim/: __init__.py  decision_boundaries.py  iris_training.py  linear_maps.py  mlp.py
tests/: test_decision_boundaries.py  test_iris_training.py  test_linear_maps.py  test_mlp.py
