[project]
name = "deepmatrixanim"
version = "0.1.0"
description = "Manim animations for understanding deep learning through matrix and vector operations."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "manim>=0.19.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepmatrixanim"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
